--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "materio-mui-react-nextjs-admin-template-free",
+  "name": "react-nextjs-admin-template-free",
   "description": "Most Powerful & Comprehensive Free MUI React NextJS Admin Dashboard Template built for developers! 🚀",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "author": {
-    "name": "ThemeSelection",
-    "url": "https://themeselection.com/"
+    "name": "铲车司机",
+    "url": "https://const.site"
   },
   "bugs": {
-    "url": "https://github.com/themeselection/materio-mui-react-nextjs-admin-template-free/issues"
+    "url": "https://github.com/luckfunc/react-nextjs-admin-template/issues"
   },
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/themeselection/materio-mui-react-nextjs-admin-template-free.git"
+    "url": "https://github.com/luckfunc/react-nextjs-admin-template.git"
   },
-  "homepage": "https://themeselection.com/products/materio-free-mui-react-nextjs-admin-template/",
+  "homepage": "https://github.com/luckfunc/react-nextjs-admin-template",
   "keywords": [
     "react",
     "javascript",
