--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
+    "@mui/utils": "^5.15.13",
     "@popperjs/core": "^2.11.2",
     "apexcharts-clevision": "3.28.5",
     "clsx": "^1.1.1",
