--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: install deps
         run: pnpm i
+      - name: install deps
+        run: pnpm install --no-frozen-lockfile
       - name: build app
         run: pnpm run build
 
